# sensex

./: .gitignore  Cargo.toml  install.sh  jest.config.js  package-lock.json  package.json
src/backend/: Cargo.toml  run.bat
src/backend/src/: client.rs  main.rs
src/backend/src/client/: mod.rs
src/backend/src/documents/: agents.yaml  ciscat.yaml  decoders.yaml  manager.yaml  mitre.yaml  overview.yaml  sca.yaml  syscheck.yaml  syscollector.yaml
src/backend/src/handlers/: active_response.rs  agents.rs  auth.rs  ciscat.rs  cluster.rs  common.rs  decoders.rs  events.rs  experimental.rs  groups.rs  lists.rs  logtest.rs  manager.rs  mitre.rs  mod.rs  rootcheck.rs  rules.rs  sca.rs  security.rs  syscheck.rs  syscollector.rs  tasks.rs  vulnerability.rs
src/backend/src/routes/: agents.rs  ciscat.rs  cluster.rs  decoders.rs  events.rs  experimental.rs  groups.rs  lists.rs  logtest.rs  manager.rs  mitre.rs  mod.rs  rootcheck.rs  rules.rs  sca.rs  security.rs  syscheck.rs  syscollector.rs  system.rs  tasks.rs  vulnerability.rs
src/backend/src/tests/: agent_specific_tests.rs  agents_tests.rs  analyze_structure.rs  auth_tests.rs  ciscat_tests.rs  cluster_tests.rs  common.rs  decoders_tests.rs  events_tests.rs  experimental_tests.rs  groups_list_tests.rs  groups_tests.rs  groups_with_agents_tests.rs  integration_test.rs  lifecycle_tests.rs  lists_tests.rs  logtest_tests.rs  manager_tests.rs  mitre_tests.rs  mod.rs  overview_tests.rs  rag_query_tests.rs  rootcheck_tests.rs  rules_tests.rs  sca_tests.rs  security_tests.rs  statistics_tests.rs  syscheck_tests.rs  syscollector_tests.rs  tasks_tests.rs  test_framework.rs  test_utils.rs  vulnerability_tests.rs
src/backend/test_results/agents/: README.md  agents.md  agents_001_config_agent_global.md  agents_001_daemons_stats.md  agents_001_group_is_sync.md  agents_001_stats_analysisd.md  agents_no_group.md  agents_outdated.md  agents_stats_distinct.md  (+2 more)
(+135 files in other folders)
