[package]
name = "sensex-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0.0", features = ["full"] }
