[package]
name = "sensex-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.20", features = ["json"] }
tower-http = { version = "0.4.4", features = ["cors"] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4.13"
chrono = "0.4.38"
serde_derive = "1.0.213"

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
tower = "0.4.13"
